[package]
name = "hn-clone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { git = "https://github.com/dioxuslabs/dioxus", features = [
    "web",
    "router",
] }

anyhow = "1.0.43"
async-recursion = "1.0.0"
chrono = { version = "0.4.19", features = ["serde", "wasmbind"] }
futures = "0.3.17"
log = "0.4.14"
reqwasm = "0.4.1"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
web-sys = { version = "0.3.56", features = ["Url"] }
